fix: copy and paste collapsed code

--- a/src/json5-editor/style.less
+++ b/src/json5-editor/style.less
@@ -62,6 +62,7 @@
 
     & > span {
       padding: 0 8px;
+      height: 21px;
       display: flex;
       align-items: flex-start;
       justify-content: space-between;
